--- a/src/UI/Librarian/LibrarianJFrame.form
+++ b/src/UI/Librarian/LibrarianJFrame.form
@@ -21,7 +21,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-33,0,0,3,120"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-33,0,0,5,80"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
@@ -239,26 +239,20 @@
         <Component class="javax.swing.JTable" name="booksTbl">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="10" rowCount="0">
+              <Table columnCount="9" rowCount="0">
                 <Column editable="true" title="BOOK NAME" type="java.lang.Object"/>
                 <Column editable="true" title="SERIAL NUMBER" type="java.lang.Object"/>
                 <Column editable="true" title="LANGUAGE" type="java.lang.Object"/>
                 <Column editable="true" title="NO. OF PAGES" type="java.lang.Object"/>
                 <Column editable="true" title="BINDING TYPE" type="java.lang.Object"/>
                 <Column editable="true" title="REGISTER DATE" type="java.lang.Object"/>
-                <Column editable="true" title="AUTHOR" type="java.lang.Object"/>
-                <Column editable="true" title="AUTHOR RATING" type="java.lang.Object"/>
                 <Column editable="true" title="AVAILABILITY STATUS" type="java.lang.Object"/>
+                <Column editable="true" title="AUTHOR" type="java.lang.Object"/>
                 <Column editable="true" title="GENRE" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
@@ -548,7 +542,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="390" y="251" width="-1" height="-1"/>
+          <AbsoluteConstraints x="390" y="290" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -565,7 +559,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="390" y="295" width="104" height="-1"/>
+          <AbsoluteConstraints x="830" y="260" width="104" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -573,9 +567,12 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="ADD AUTHOR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addAuthorBtnActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="525" y="292" width="-1" height="-1"/>
+          <AbsoluteConstraints x="670" y="290" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -590,7 +587,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="669" y="286" width="98" height="-1"/>
+          <AbsoluteConstraints x="830" y="220" width="98" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -607,6 +604,32 @@
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="1160" y="20" width="-1" height="-1"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JButton" name="assignAuthBtn">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="ASSIGN AUTHOR"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="assignAuthBtnActionPerformed"/>
+      </Events>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="950" y="220" width="-1" height="-1"/>
+        </Constraint>
+      </Constraints>
+    </Component>
+    <Component class="javax.swing.JButton" name="assignGenreBtn">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="ASSIGN GENRE"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="assignGenreBtnActionPerformed"/>
+      </Events>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="950" y="260" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
